--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -DskipTests=true -B -package --file pom.xml
+      run: mvn -DskipTests=true -B package --file pom.xml
     - name: Run JUnit tests
       run: mvn clean test
     - name: Archive test output
