--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,12 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -DskipTests=true -B package --file pom.xml
+    - name: 'Create env file'
+      run: |
+        touch .env
+        echo API_USERNAME=admin >> .env
+        echo API_PASSWORD=password123 >> .env
+        cat .env
     - name: Run JUnit tests
       run: mvn clean test
     - name: Archive test output
